--- a/style/main.css
+++ b/style/main.css
@@ -1,5 +1,95 @@
+html, body
+{
+  font-family: 'proxima-nova', Arial, sans-serif;
+}
+
+#yehaw-event-map-wrapper
+{
+  position: relative;
+  margin: 0 auto;
+  max-width: 720px;
+}
+
 #yehaw-event-map
 {
-  height: 500px;
-  width: 1000px;
+  height: 400px;
+  width: 100%;
+}
+
+#yehaw-event-list
+{
+  height: 442px;
+  list-style: none;
+  margin: 1em 0;
+  overflow: auto;
+  padding: 0;
+}
+
+#yehaw-event-list li
+{
+  cursor: pointer;
+  padding: 0.75em 0.5em;
+  transition: .1s background linear;
+}
+
+#yehaw-event-list li:hover
+{
+  background: #EEE;
+}
+
+#yehaw-event-list .yehaw-event-title
+{
+  display: block;
+}
+
+#yehaw-event-list .yehaw-event-description
+{
+  display: block;
+}
+
+#yehaw-event-map-overlay-toggle
+{
+  background: #272727;
+  border: none;
+  color: #FFF;
+  cursor: pointer;
+  font-weight: bold;
+  outline: none;
+  padding: 1em;
+  text-transform: uppercase;
+  transition: .1s opacity linear;
+  width: 100%;
+}
+
+#yehaw-event-map-overlay-toggle:hover
+{
+  opacity: 0.8;
+}
+
+.yehaw-event-title
+{
+  font-weight: bold;
+}
+
+@media (min-width: 37.5em)
+{
+  #yehaw-event-list
+  {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    width: 30%;
+  }
+
+  #yehaw-event-map
+  {
+    float: right;
+    width: 70%;
+  }
+
+  #yehaw-event-map-overlay-toggle
+  {
+    float: right;
+    width: 70%;
+  }
 }
