--- a/style/main.css
+++ b/style/main.css
@@ -1,19 +1,54 @@
 html, body
 {
-  font-family: 'proxima-nova', Arial, sans-serif;
+  font-family: 'Montserrat', Arial, sans-serif;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 #yehaw-event-map-wrapper
 {
   position: relative;
-  margin: 0 auto;
-  max-width: 720px;
+  height: 100%;
 }
 
 #yehaw-event-map
 {
-  height: 400px;
-  width: 100%;
+  height: 100%;
+  float: right;
+  width: 80%;
+}
+
+#yehaw-event-list
+{
+  height: 100%;
+  list-style: none;
+  margin: 0;
+  overflow: auto;
+  padding: 0;
+}
+
+#yehaw-event-list li
+{
+  cursor: pointer;
+  padding: 0.75em 0.5em;
+  transition: .1s background linear;
+}
+
+#yehaw-event-list li:hover
+{
+  background: #EEE;
+}
+
+#yehaw-event-list .yehaw-event-title
+{
+  display: block;
+}
+
+#yehaw-event-list .yehaw-event-description
+{
+  display: block;
 }
 
 #yehaw-event-map-overlay-toggle
