--- a/style/main.css
+++ b/style/main.css
@@ -87,10 +87,12 @@ html, body
 .map-menu
 {
   background: #FFF;
+  box-sizing: border-box;
   display: none;
   height: 100%;
+  padding-top: 2.5em;
+  overflow: auto;
   position: fixed;
-  top: 2.4em;
   width: 100%;
   z-index: 1;
 }
@@ -102,8 +104,7 @@ html, body
 
 .map-menu-list
 {
-  height: 100%;
-  overflow: auto;
+
   width: 100%;
 }
 
