Added count of current events

--- a/style/main.css
+++ b/style/main.css
@@ -238,12 +238,17 @@ html, body
 {
   list-style: none;
   overflow: auto;
-  padding: 1em 0;
+  padding: 0;
 }
 
 #filter-list li
 {
   margin: 1.5em;
+}
+
+#filter-list li:first-child
+{
+  margin-top: 0;
 }
 
 #filter-list label
@@ -267,8 +272,7 @@ html, body
 /* No Events Message
 ------------------------------------------------------- */
 
-#no-events-message
+.status-message
 {
-  display: none;
   padding: 1.5em;
 }
