--- a/style/main.css
+++ b/style/main.css
@@ -88,18 +88,20 @@ html, body
 {
   background: #FFF;
   box-sizing: border-box;
-  display: none;
-  height: 100%;
+  height: 0;
   padding-top: 2.5em;
+  opacity: 0;
   overflow: auto;
   position: fixed;
+  transition: opacity 0.2s;
   width: 100%;
   z-index: 1;
 }
 
 .map-menu.open
 {
-  display: block;
+  height: 100%;
+  opacity: 1;
 }
 
 .map-menu-list
